[package]
name = "hqu_ual_interface_rs"
version = "0.1.0"
edition = "2021"
authors = ["zakiaatot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = { version = "0.86.1", default-features = false, features = [
    "imgproc",
    "imgcodecs",
] }
anyhow = "1.0.70"
base64 = "0.21.0"
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "cookies",
    "rustls-tls",
] }
aes = "0.8.3"
cbc = { features = ["alloc"], version = "0.1.2" }
random-string = "1.0.0"
scraper = "0.18.1"
serde_json = "1.0.103"
serde = { version = "*", features = ["derive"] }
actix-web = { version = "4.3.1", features = ['rustls'] }
log = "0.4.19"
env_logger = "0.10.0"
